# Autumn.cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  environment.yml  python_test.py  python_test_mpl.py  python_test_mpl_ci.py  requirements.txt  test.jl  test2.jl
autumnstdlib/: stdlib.sexp
extras/: python_test_mpl_dd.py  python_test_mpl_mcq.py  python_test_mpl_viz.py
include/: Expr.hpp  Stmt.hpp  grammar.hpp
include/interpreter/: AutumnCallable.hpp  AutumnStdComponents.hpp  AutumnStdLib.hpp  Environment.hpp  Error.hpp  Interpreter.hpp  RandomGenerator.hpp  Resolver.hpp  VarCollector.hpp
include/interpreter/typesystem/: AutumnType.hpp
include/interpreter/valuesystem/: AutumnCallableValue.hpp  AutumnClass.hpp  AutumnConstructor.hpp  AutumnExprValue.hpp  AutumnInstance.hpp  AutumnLambda.hpp  AutumnValue.hpp  State.hpp
include/lexer/: Lexer.hpp  Token.hpp  TokenType.hpp
include/parser/: AstPrinter.hpp  Parser.hpp  sexpresso.hpp
include/static_analyzer/: StaticAnalyzer.hpp
install_scripts/: setup_emscripten.sh
src/: Token.cpp
src/interpreter/: AutumnStdComponents.cpp  Environment.cpp  Interpreter.cpp
src/interpreter/stdlib/: AddObj.cpp  AdjPositions.cpp  AllObjs.cpp  AllPositions.cpp  Any.cpp  ArrayEqual.cpp  At.cpp  Clicked.cpp  Concat.cpp  Defined.cpp  DownPressed.cpp  Filter.cpp  Foldl.cpp  Head.cpp  IsList.cpp  IsOutsideBounds.cpp  IsWithinBounds.cpp  LeftPressed.cpp  Length.cpp  Map.cpp  Prev.cpp  Print.cpp  RandomPosition.cpp  Range.cpp  RemoveObj.cpp  RenderAll.cpp  RightPressed.cpp  Rotate.cpp  Sqrt.cpp  Tail.cpp  UniformChoice.cpp  UpPressed.cpp  UpdateObj.cpp  isFreePos.cpp
src/interpreter/typesystem/: AutumnType.cpp
src/interpreter/valuesystem/: AutumnClass.cpp  AutumnExprValue.cpp  AutumnValue.cpp
src/parser/: sexpresso.cpp
testInterpreters/: test_grow.cpp  test_light.cpp
test_suites/: test_token_type.cpp
tests/: paint.sexp
tools/: bindings.cpp  bindings_julia.cpp  bindings_python.cpp  generate_ast.cpp  lexer.cpp  main.cpp  parser.cpp  sexp_parser.cpp
